# ontario-grid-pipelines

./: .gitignore  CLAUDE.md  README.md  pipeline.py  pixi.toml  pyproject.toml
.beads/: config.yaml  dolt-backup.json  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: dashboard.yml  deploy-dashboard.yml  migrate.yml  pipeline.yml
dashboard/: package-lock.json  package.json
dashboard.observable-backup/: observablehq.config.js  package.json
dashboard.observable-backup/src/: rates.md
dashboard/.evidence/customization/: .profile.json
dashboard/pages/: history.md  index.md  rates.md
dashboard/sources/ontario_grid/: co2_full_history.sql  co2trend.sql  connection.yaml  current_rates.sql  generation.sql  generation_annual.sql  generation_full_history.sql  latest.sql  monthly.sql  tiered_rates.sql  tou.sql  ulo_rates.sql
dashboard/src/: index.md
docs/: reliability-design.md  reliability-flowchart.md
pipelines/gridwatch/: __init__.py  source.py
pipelines/ieso/: __init__.py  source.py
pipelines/oeb/: __init__.py  source.py
scripts/: export_parquet.py  migrate_historical.py
tests/: test_freshness.py  test_gridwatch.py  test_ieso.py  test_migrate_historical.py  test_oeb.py
transform/: dbt_project.yml  profiles.yml
transform/macros/: source_exists.sql
transform/models/: sources.yml
transform/models/marts/: fct_co2_intensity.sql  fct_grid_generation.sql  schema.yml
transform/models/staging/: schema.yml  stg_gridwatch.sql  stg_ieso_generation.sql  stg_oeb_rates.sql
